--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 # Base ----------------------------------------
 torch   # https://pytorch.org/
 torchvision
-timm
+timm   # 用于实现cutmix数据增强
 albumentations
 numpy>=1.21.0
 pandas>=1.3.0
